--- a/assets/webconfig/content/conf_leds.html
+++ b/assets/webconfig/content/conf_leds.html
@@ -46,55 +46,55 @@
 										<tbody>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledstop" data-i18n="conf_leds_layout_cl_top">Top</label>
+													<label class="ltdlabel" for="ip_cl_top" data-i18n="conf_leds_layout_cl_top">Top</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledstop" type="number" value="10" min="0" step="1"></input>
+													<input class="form-control ledCLconstr " id="ip_cl_top" type="number" value="10" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledsbottom" data-i18n="conf_leds_layout_cl_bottom">Bottom</label>
+													<label class="ltdlabel" for="ip_cl_bottom" data-i18n="conf_leds_layout_cl_bottom">Bottom</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsbottom" type="number" value="10" min="0" step="1"></input>
+													<input class="form-control ledCLconstr" id="ip_cl_bottom" type="number" value="10" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledsleft" data-i18n="conf_leds_layout_cl_left">Left</label>
+													<label class="ltdlabel" for="ip_cl_left" data-i18n="conf_leds_layout_cl_left">Left</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsleft" type="number" value="6" min="0" step="1"></input>
+													<input class="form-control ledCLconstr" id="ip_cl_left" type="number" value="6" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledsright" data-i18n="conf_leds_layout_cl_right">Right</label>
+													<label class="ltdlabel" for="ip_cl_right" data-i18n="conf_leds_layout_cl_right">Right</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsright" type="number" value="6" min="0" step="1"></input>
+													<input class="form-control ledCLconstr" id="ip_cl_right" type="number" value="6" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledsglength" data-i18n="conf_leds_layout_cl_gaglength">Gap length</label>
+													<label class="ltdlabel" for="ip_cl_glength" data-i18n="conf_leds_layout_cl_gaglength">Gap length</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsglength" type="number" value="0" min="0" step="1"></input>
+													<input class="form-control ledCLconstr" id="ip_cl_glength" type="number" value="0" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
 											<tr>
 												<td class="ltd">
-													<label class="ltdlabel" for="ip_cl_ledsgpos" data-i18n="conf_leds_layout_cl_gappos">Gap position</label>
+													<label class="ltdlabel" for="ip_cl_gpos" data-i18n="conf_leds_layout_cl_gappos">Gap position</label>
 												</td>
 												<td class="itd">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsgpos" type="number" value="0" min="0" step="1">
+													<input class="form-control ledCLconstr" id="ip_cl_gpos" type="number" value="0" min="0" step="1">
 												</td>
 											</tr>
 											<tr>
@@ -102,7 +102,7 @@
 													<label class="ltdlabel" for="ip_cl_position" data-i18n="conf_leds_layout_cl_inppos">Input position</label>
 												</td>
 												<td class="itd">
-													<input class="form-control ledCLconstr led_val_int" id="ip_cl_position" type="number" value="0" step="1">
+													<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" step="1">
 												</td>
 											</tr>
 											<tr>
@@ -111,7 +111,7 @@
 												</td>
 												<td class="itd">
 													<div class="checkbox">
-														<input class="ledCLconstr led_val_bool" id="ip_cl_reverse" type="checkbox" value="false"></input>
+														<input class="ledCLconstr" id="ip_cl_reverse" type="checkbox" value="false"></input>
 														<label></label>
 													</div>
 												</td>
@@ -130,19 +130,19 @@
 													<tbody>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledshdepth" data-i18n="conf_leds_layout_cl_hleddepth">Horizontal LED depth</label>
+																<label class="ltdlabel" for="ip_cl_hdepth" data-i18n="conf_leds_layout_cl_hleddepth">Horizontal LED depth</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledshdepth" type="number" value="8" min="1" max="100" step="1"></input>
+																<input class="form-control ledCLconstr" id="ip_cl_hdepth" type="number" value="8" min="1" max="100" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledsvdepth" data-i18n="conf_leds_layout_cl_vleddepth">Vertical LED depth</label>
+																<label class="ltdlabel" for="ip_cl_vdepth" data-i18n="conf_leds_layout_cl_vleddepth">Vertical LED depth</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsvdepth" type="number" value="5" min="1" max="100" step="1"></input>
+																<input class="form-control ledCLconstr" id="ip_cl_vdepth" type="number" value="5" min="1" max="100" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
@@ -151,25 +151,25 @@
 																<label class="ltdlabel" for="ip_cl_overlap" data-i18n="conf_leds_layout_cl_overlap">Edge Gap</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr led_val_int" id="ip_cl_overlap" type="number" value="0" min="0" max="100" step="1"></input>
+																<input class="form-control ledCLconstr" id="ip_cl_overlap" type="number" value="0" min="0" max="200" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledsedgegap" data-i18n="conf_leds_layout_cl_edgegap">Edge Gap</label>
+																<label class="ltdlabel" for="ip_cl_edgegap" data-i18n="conf_leds_layout_cl_edgegap">Edge Gap</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsedgegap" type="number" value="0" min="0" max="50" step="1"></input>
+																<input class="form-control ledCLconstr" id="ip_cl_edgegap" type="number" value="0" min="0" max="50" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 											<!--			<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledscornergap" data-i18n="conf_leds_layout_cl_cornergap">Corner Gap</label>
+																<label class="ltdlabel" for="ip_cl_cornergap" data-i18n="conf_leds_layout_cl_cornergap">Corner Gap</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledscornergap" type="number" value="0" min="0" max="50" step="1"></input>
+																<input class="form-control ledCLconstr " id="ip_cl_cornergap" type="number" value="0" min="0" max="50" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
@@ -201,7 +201,7 @@
 											<label class="ltdlabel" for="ip_ma_ledshoriz" data-i18n="conf_leds_layout_ma_horiz">Horizontal</label>
 										</td>
 										<td class="itd input-group">
-											<input class="form-control ledMAconstr led_val_int" id="ip_ma_ledshoriz" type="number" value="10" min="1" step="1"></input>
+											<input class="form-control ledMAconstr" id="ip_ma_ledshoriz" type="number" value="10" min="1" step="1"></input>
 											<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 										</td>
 									</tr>
@@ -210,7 +210,7 @@
 											<label class="ltdlabel" for="ip_ma_ledsvert" data-i18n="conf_leds_layout_ma_vert">Vertical</label>
 										</td>
 										<td class="itd input-group">
-											<input class="form-control ledMAconstr led_val_int" id="ip_ma_ledsvert" type="number" value="10" min="1" step="1"></input>
+											<input class="form-control ledMAconstr" id="ip_ma_ledsvert" type="number" value="10" min="1" step="1"></input>
 											<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 										</td>
 									</tr>
@@ -219,7 +219,7 @@
 											<label class="ltdlabel" for="ip_ma_cabling"  data-i18n="conf_leds_layout_ma_cabling">Cabling</label>
 										</td>
 										<td class="itd">
-											<select class="form-control ledMAconstr led_val_string" id="ip_ma_cabling">
+											<select class="form-control ledMAconstr" id="ip_ma_cabling">
 												<option value="snake"  data-i18n="conf_leds_layout_ma_optsnake">Snake</option>
 												<option value="parallel"  data-i18n="conf_leds_layout_ma_optparallel">Parallel</option>
 											</select>
@@ -242,7 +242,7 @@
 											<label class="ltdlabel" for="ip_ma_start" data-i18n="conf_leds_layout_ma_position">Input</label>
 										</td>
 										<td class="itd">
-											<select class="form-control ledMAconstr led_val_string" id="ip_ma_start">
+											<select class="form-control ledMAconstr" id="ip_ma_start">
 												<option value="top-left"  data-i18n="conf_leds_layout_ma_opttopleft">Top left</option>
 												<option value="top-right"  data-i18n="conf_leds_layout_ma_opttopright">Top right</option>
 												<option value="bottom-left"  data-i18n="conf_leds_layout_ma_optbottomleft">Bottom left</option>
