--- a/assets/webconfig/content/conf_leds.html
+++ b/assets/webconfig/content/conf_leds.html
@@ -286,6 +286,7 @@
 					<div class="panel-body">
 						<p id="previewcreator" style="font-weight:bold"></p>
 						<p id="previewledcount" style="font-weight:bold"></p>
+						<p id="previewledpower" style="font-weight:bold"></p>
 						<div id="led_vis_help"></div>
 						<div class="col-lg-12 st_helper" style="padding-left:0px; padding-right:0px">
 							<div id="leds_preview"></div>
