--- a/assets/webconfig/content/conf_leds.html
+++ b/assets/webconfig/content/conf_leds.html
@@ -268,7 +268,7 @@
 							<div id="collapse4" class="panel-collapse collapse">
 								<div class="panel-body">
 									<p  data-i18n="conf_leds_layout_textf1">This textfield shows by default your current loaded layout and will be overwritten if you generate a new one above. Optional you could perform further edits.</p>
-									<textarea rows="25" id="ledconfig" class="form-control"></textarea>
+									<div id="aceedit" style="width:100%;height:500px"></div>
 								</div>
 								<div class="panel-footer">
 									<button  type="button" class="btn btn-warning" id="leds_custom_updsim"><i class="fa fa-search fa-fw"></i><span data-i18n="conf_leds_layout_button_updsim">Update preview</span></button>
@@ -286,6 +286,7 @@
 					<div class="panel-body">
 						<p id="previewcreator" style="font-weight:bold"></p>
 						<p id="previewledcount" style="font-weight:bold"></p>
+						<p id="previewledpower" style="font-weight:bold"></p>
 						<div id="led_vis_help"></div>
 						<div class="col-lg-12 st_helper" style="padding-left:0px; padding-right:0px">
 							<div id="leds_preview"></div>
