--- a/assets/webconfig/content/restart.html
+++ b/assets/webconfig/content/restart.html
@@ -17,19 +17,30 @@
 performTranslation();
 var connectionLost = false;
 var connectionTimer;
+var count = 1;
 
 function tryReconnect()
 {
+	if(count > 25)
+		window.clearInterval(connectionTimer);
+	
 	$.ajax({ url: "/" }).done(function(data) {
 		window.clearInterval(connectionTimer);
 		window.location.href ="/";
+	})
+	.fail( function( jqXHR, textStatus ) {
+		count++;
 	});
 }
 
 function restartAction()
 {
-	connectionLost = true;
-	connectionTimer = window.setInterval(tryReconnect, 1000);
+	if(!connectionLost)
+	{
+		window.clearInterval(cronId);
+		connectionLost = true;
+		connectionTimer = window.setInterval(tryReconnect, 1000);
+	}
 }
 
 </script>
