--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -7,49 +7,42 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="description" content="">
 
-	<title data-i18n="general_webui_title">Hyperion - Error</title>
+	<title data-i18n="general_webui_title">Hyperion - Web Configuration</title>
 
 	<!-- jQuery -->
-	<script src="/js/lib/jquery.min.js"></script>
+	<script src="js/lib/jquery.min.js"></script>
 
 	<!-- Hyperion -->
-	<script src="/js/hyperion.js"></script>
-	<script src="/js/ui_utils.js"></script>
-
-	<!-- textarea --> 
-	<script src="/js/lib/jquery-linedtextarea.js"></script>
-	<link href="/css/jquery-linedtextarea.css" type="text/css" rel="stylesheet" />
+	<script src="js/hyperion.js"></script>
+	<script src="js/ui_utils.js"></script>
 	
 	<!-- Colorpicker -->
-	<script src="/js/lib/bootstrap-colorpicker.min.js"></script>
-	<link href="/css/bootstrap-colorpicker.min.css" rel="stylesheet">
+	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
+	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
 	<!-- JSONEditor -->
-	<script src="/js/lib/jsoneditor.js"></script>
+	<script src="js/lib/jsoneditor.js"></script>
 
 	<!--Language Support -->
-	<script src="/js/lib/jquery.i18n.js"></script>
-	<script src="/js/lib/jquery.i18n.messagestore.js"></script>
-	<script src="/js/lib/jquery.i18n.fallbacks.js"></script>
-	<script src="/js/lib/jquery.i18n.parser.js"></script>
-	<script src="/js/lib/jquery.i18n.emitter.js"></script>
-	<script src="/js/lib/jquery.i18n.language.js"></script>
+	<script src="js/lib/jquery.i18n.js"></script>
+	<script src="js/lib/jquery.i18n.messagestore.js"></script>
+	<script src="js/lib/jquery.i18n.fallbacks.js"></script>
+	<script src="js/lib/jquery.i18n.parser.js"></script>
+	<script src="js/lib/jquery.i18n.emitter.js"></script>
+	<script src="js/lib/jquery.i18n.language.js"></script>
 	
 	<!-- Bootstrap Core CSS -->
-	<link href="/css/bootstrap.css" rel="stylesheet">
-
-	<!-- Flags -->
-	<link href="/css/flag-icon.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- MetisMenu CSS -->
-	<link href="/css/metisMenu.css" rel="stylesheet">
+	<link href="css/metisMenu.css" rel="stylesheet">
 
 	<!-- Custom CSS -->
-	<link href="/css/sb-admin-2.css" rel="stylesheet">
-	<link href="/css/hyperion.css" rel="stylesheet">
+	<link href="css/sb-admin-2.css" rel="stylesheet">
+	<link href="css/hyperion.css" rel="stylesheet">
 
 	<!-- Custom Fonts -->
-	<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -87,16 +80,6 @@
 			<!-- /.navbar-header -->
 
 			<ul class="nav navbar-top-links navbar-right">
-				<li class="dropdown" id="btn_setlang">
-					<a>		
-						<i class="fa fa-globe fa-fw"></i>
-					</a>
-				</li>
-				<li class="dropdown" id="btn_setaccess">
-					<a>		
-						<i class="fa fa-key fa-fw"></i>
-					</a>
-				</li>
 				<li class="dropdown" id="btn_open_ledsim">
 					<a>		
 						<i class="fa fa-television fa-fw"></i>
@@ -135,9 +118,32 @@
 							</a>
 						</li>
 					</ul>
-					<!-- /.dropdown-alerts -->
 				</li>
 				<!-- /.dropdown -->
+				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+						<i class="fa fa-wrench fa-fw"></i>  <i class="fa fa-caret-down"></i>
+					</a>
+					<ul class="dropdown-menu dropdown-alerts">
+						<li id="btn_setlang">
+							<a>
+								<div>
+									<i class="fa fa-globe fa-fw"></i>
+									<span data-i18n="InfoDialog_lang_title"></span>
+								</div>
+							</a>
+						</li>
+						<li class="divider"></li>
+						<li id="btn_setaccess">
+							<a>
+								<div>
+									<i class="fa fa-key fa-fw"></i>
+									<span data-i18n="InfoDialog_access_title"></span>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</li>
 			</ul>
 			<!-- /.navbar-top-left -->
 
@@ -254,25 +260,29 @@
 	</div>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="/js/lib/bootstrap.min.js"></script>
+	<script src="js/lib/bootstrap.min.js"></script>
 
 	<!-- Metis Menu Plugin JavaScript -->
-	<script src="/js/lib/metisMenu.min.js"></script>
+	<script src="js/lib/metisMenu.min.js"></script>
 
 	<!-- Custom Theme JavaScript -->
-	<script src="/js/lib/sb-admin-2.js"></script>
+	<script src="js/lib/sb-admin-2.js"></script>
 
-	<script src="/js/content_index.js"></script>
-	<script src="/js/settings.js"></script>
-	<script src="/js/wizard.js"></script>
+	<script src="js/content_index.js"></script>
+	<script src="js/settings.js"></script>
+	<script src="js/wizard.js"></script>
 	
 	<!--gijgo dialog-->
-	<script src="/js/lib/draggable.min.js"></script>
-	<script src="/js/lib/dialog.min.js"></script>
-	<script src="/js/ledsim.js"></script>
+	<script src="js/lib/draggable.min.js"></script>
+	<script src="js/lib/dialog.min.js"></script>
+	<script src="js/ledsim.js"></script>
 	
 	<!--Client-side download-->
-	<script src='/js/lib/download.min.js'></script>
+	<script src='js/lib/download.min.js'></script>
+	
+	<!--JsonAceEditor-->
+	<script src='js/lib/jsonaceeditor.min.js'></script>
+	<link href="css/jsonaceeditor.min.css" rel="stylesheet" type="text/css">
 	
 </body>
 </html>
