--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+	<script>
+	if (/MSIE/.test(navigator.userAgent) || /Trident/.test(navigator.userAgent))
+	{
+		window.location.pathname = '/content/ie_not_supported.html';
+	}
+	</script>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
