--- a/assets/webconfig/content/ie_not_supported.html
+++ b/assets/webconfig/content/ie_not_supported.html
@@ -1,10 +1,11 @@
 <html>
-  <head>
-    <title></title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
-  sorry internet explorer is not supported, please use recent versions of firefox, chrome or MS Edge
-  </body>
+	<head>
+		<title>Hyperion WebUI - IE not supported</title>
+		<meta content="">
+		<style> body {margin:auto; padding:2%; text-align:center; font-family:arial;}</style>
+	</head>
+	<body>
+		<img src="../img/hyperion/hyperionlogo.png" alt="Redefine ambient light!" style="margin-bottom:20px;">
+		<h2><span style="color:red">We are sorry, Internet Explorer is not supported!</span><br /><br /> Please use recent versions of Firefox, Chrome, Safari or MS Edge.</h2>
+	</body>
 </html>
