update/fix remote

--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -63,7 +63,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<button data-i18n="remote_color_button_reset" type="button" class="btn btn-warning" id="reset_color" style="margin-top:10px;">Reset Color/Effect</button>
+					<button data-i18n="remote_color_button_reset" type="button" class="btn btn-primary" id="reset_color" style="margin-top:10px;">Reset Color/Effect</button>
 				</div>
 			</div>
 		</div>
