--- a/assets/webconfig/content/conf_logging.html
+++ b/assets/webconfig/content/conf_logging.html
@@ -6,6 +6,7 @@
 			<div class="row" id='conf_cont'></div>
 			<hr />
 			<div id="log_content"><span style="font-weight:bold;font-size:17px" data-i18n="conf_logging_nomessage"></span></div>
+			<div id="prev_reports"></div>
 		</div>
 	</div>
 </div>
