--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -12,8 +12,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-	<meta name="description" content="">
-
+	<meta name="description" content="Hyperion Web Configuration">
+	<meta name="msapplication-TileColor" content="#91989C">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+	
 	<title data-i18n="general_webui_title">Hyperion - Web Configuration</title>
 
 	<!-- jQuery -->
@@ -190,7 +194,7 @@
 		</nav>
 
 		<!-- Page Content -->
-		<div id="page-wrapper" style="padding-top:10px">
+		<div id="page-wrapper" style="padding-top:10px; overflow: hidden;">
 		<div id="hyperion_reload_notify" class="alert alert-warning" style="display:none;padding:10px;margin:0">
 			<div class="panel-danger" style="text-align:right">
 				<div style="float:left;line-height:33px;"  data-i18n="dashboard_alert_message_confedit">Your Hyperion configuration has been modified. To apply it, restart Hyperion.</div>
