--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -91,6 +91,11 @@
 			<!-- /.navbar-header -->
 
 			<ul class="nav navbar-top-links navbar-right">
+				<li class="dropdown" id="btn_instanceswitch" style="display:none">
+					<a>		
+						<i class="fa fa-exchange fa-fw"></i>
+					</a>
+				</li>
 				<li class="dropdown" id="btn_open_ledsim">
 					<a>		
 						<i class="fa fa-television fa-fw"></i>
