--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -1,16 +1,7 @@
 <div class="container-fluid">
-<h3 class="page-header"><i class="fa fa-wifi fa-fw"></i><span data-i18n="main_menu_remotecontrol_token">Remote Control</span></h3>
-</div>
-
-<div class="container-fluid">
+	<h3 class="page-header"><i class="fa fa-wifi fa-fw"></i><span data-i18n="main_menu_remotecontrol_token">Remote Control</span></h3>
 	<div class="row">
-
-	</div>
-</div>
-
-<div  class="container-fluid">
-	<div class="row">
-		<div class="col-lg-8 col-xxl-7">
+		<div class="col-md-12 col-lg-8 col-xxl-7">
 			<div class="panel panel-default" >
 				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_input_label">Source selection</span></div>
 				<div class="panel-body">
@@ -20,7 +11,7 @@
 			</div>
 		</div>
 
-		<div class="col-lg-4 col-xxl-5">
+		<div class="col-md-6 col-lg-4 col-xxl-5">
 			<div class="panel panel-default" >
 				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_components_label">Components control</span></div>
 				<div class="panel-body" id="comp_intro">
@@ -28,12 +19,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
 
-<div  class="container-fluid">
-	<div class="row">
-		<div class="col-lg-6 col-xxl-4">
+		<div class="col-md-6 col-lg-6 col-xxl-4">
 			<div class="panel panel-default" >
 				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_color_label">Colors/Effects</span></div>
 				<div class="panel-body" id="color_intro">
@@ -67,7 +54,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-6 col-xxl-3">
+		<div class="col-md-6 col-lg-6 col-xxl-3">
 			<div class="panel panel-default" >
 				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_maptype_label">Mapping types</span></div>
 				<div class="panel-body" id="maptype_intro">
@@ -75,7 +62,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-6 col-xxl-5">
+		<div class="col-md-6 col-lg-6 col-xxl-5">
 			<div class="panel panel-default" >
 				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_adjustment_label"></span></div>
 				<div class="panel-body" id="adjust_content">
@@ -84,5 +71,4 @@
 		</div>
 	</div>
 </div>
-
 <script src="/js/content_remote.js" ></script>
