--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -14,6 +14,10 @@
 										<table class="table borderless">
 											<tbody>
 												<tr>
+													<td  data-i18n="dashboard_infobox_label_statush"></td>
+													<td id="dash_statush" style="font-weight:bold">unknown</td>
+												</tr>
+												<tr>
 													<td  data-i18n="dashboard_infobox_label_platform">Platform:</td>
 													<td id="dash_platform"></td>
 												</tr>
@@ -39,6 +43,9 @@
 												</tr>
 											</tbody>
 										</table>
+										<hr>
+										<p style="font-weight:bold" data-i18n="dashboard_infobox_label_smartacc">Smart Access<p>
+										<span id="btn_hsc"></span>
 										<hr>
 										<span id="versioninforesult"></span>
 									</div>
