--- a/assets/webconfig/content/conf_general.html
+++ b/assets/webconfig/content/conf_general.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h3 class="page-header"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="conf_general_label_title">General</span></h3>
-			<div class="row" id="conf_cont"></div>
+			<div id="conf_cont"></div>
 			<div class="row">
 				<div class="col-lg-6" id="conf_imp">
 					<div class="panel panel-default">
