remote page add 2D/3D videoMode

--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -75,6 +75,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-md-6 col-lg-6 col-xxl-5">
+			<div class="panel panel-default" >
+				<div class="panel-heading"><i class="fa fa-wifi fa-fw"></i><span data-i18n="remote_videoMode_label"></span></div>
+				<div class="panel-body" id="videomode_intro">
+					<div id="videomodebtns"></div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 <script src="/js/content_remote.js" ></script>
