Use WebSocket to handle Kodi requests

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -282,6 +282,9 @@
 
 	<script src="js/content_index.js"></script>
 	<script src="js/settings.js"></script>
+
+	<!-- Kodi Websoket -->
+	<script src="js/kodi_ws.js"></script>
 	<script src="js/wizard.js"></script>
 
 	<!--gijgo dialog-->
