--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -179,7 +179,10 @@
 							<ul class="nav nav-second-level">
 								<li> <a class="inactive mnava" href="#conf_webconfig" id="load_webconfig"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_webconfig_token">Webconfiguration</span></a> </li>
 								<li> <a class="inactive mnava" href="#conf_logging"><i class="fa fa-reorder fa-fw"></i><span  data-i18n="main_menu_logging_token">Log</span></a> </li>
-								<li> <a class="inactive mnava" href="#update"><i class="fa fa-download fa-fw"></i><span  data-i18n="main_menu_update_token">Update</span></a> </li>
+
+<!-- 							Update is disabled
+							 	<li> <a class="inactive mnava" href="#update"><i class="fa fa-download fa-fw"></i><span  data-i18n="main_menu_update_token">Update</span></a> </li>
+-->
 								<li> <a class="inactive mnava" href="#about"><i class="fa fa-info-circle fa-fw"></i><span  data-i18n="main_menu_about_token">Update</span></a> </li>
 							</ul>
 						</li>
