Added Information Box for saving confirmation
A Box was added which is shown for 5 seconds if the server responds with
"cmd-condig-setconfig"

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -202,6 +202,12 @@
 				<p><button id="btn_hyperion_reload" class="btn btn-warning btn-sm" style="margin-top:10px" data-i18n="general_btn_restarthyperion"></button></p>
 			</div>
 		</div>
+		<div id="hyperion_config_write_success_notify" style="display:none;padding:0 10px;margin:0">
+			<div class="bs-callout bs-callout-success">
+				<h4 data-i18n="dashboard_alert_message_confsave_success_t"></h4>
+				<span data-i18n="dashboard_alert_message_confsave_success"></span>
+			</div>
+		</div>
 		<div id="hyperion_disabled_notify" style="display:none;padding:0 10px;margin:0">
 			<div class="bs-callout bs-callout-danger">
 				<h4 data-i18n="dashboard_alert_message_disabled_t"></h4>
