Min Value added to input position
BugFix: Can't be x < 0

--- a/assets/webconfig/content/conf_leds.html
+++ b/assets/webconfig/content/conf_leds.html
@@ -103,7 +103,7 @@
 													<label class="ltdlabel" for="ip_cl_position" data-i18n="conf_leds_layout_cl_inppos">Input position</label>
 												</td>
 												<td class="itd">
-													<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" step="1">
+													<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" min="0" step="1">
 												</td>
 											</tr>
 											<tr>
