Gold linker, CCache, Stats, LGTM - Increases linker performance under Linux builds by using Gold linker, if available - ccache is used if available - removed statistic class (Stats.cpp) from project due to the missing result (sorry @Brindosch) - add LGTM bandges for code analysis overview
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -34,7 +34,7 @@
 
 	createTable("","atb","about_cont");
 	for(var i = 0; i<fc.length; i++)
-		$('.atb').append(createTableRow([fc[i],sc[i]], "atb", false, true));
+		$('.atb').append(createTableRow([fc[i],sc[i]], "atb", false));
 		
 	$('#danger_trig').off().on('click',function(){
 		dcount++;
