--- a/assets/webconfig/content/update.html
+++ b/assets/webconfig/content/update.html
@@ -15,7 +15,8 @@
 </div>
 
 <script>
-performTranslation('trans_update');
+// performTranslation('trans_update');
+performTranslation();
 
 	for (key in parsedUpdateJSON)
 	{
