WebUI: Update Check, Cleanup and Hyperion Switcher IPv6 Fix
Update Check:
- New Property which allows you to select stable or beta branch checks.
- This would rely on current versions.json. It selects the first version in list with you branch (stable, beta). If it is newer hyperion tells you that a update is available
- For this we should keep our deployment pipeline in mind to format the json this way.

Cleanup:
- I cleaned up the WebUI from dead links and the support page with the affiliate links and donation adresses as we don't have them under our control. Currently only disabled, not deleated

Switcher:
- If the address which is published via bonjour serve is IPv6 the Switcher was bugged. Fixed that.

--- a/assets/webconfig/content/conf_logging.html
+++ b/assets/webconfig/content/conf_logging.html
@@ -7,11 +7,13 @@
 			<hr />
 			<div id="log_content"><span style="font-weight:bold;font-size:17px" data-i18n="conf_logging_nomessage"></span></div>
 			<hr>
+			<div style="display:none">
 			<h4 style="font-weight:bold"><i class="fa fa-reorder fa-fw"></i><span data-i18n="conf_logging_report">Bericht</span></h4>
 			<button  class="btn btn-primary" id="btn_logupload"><i class="fa fa-upload fa-fw"></i><span data-i18n="conf_logging_btn_pbupload"></span></button>
 			<div id="log_upl_pol"></div>
 			<div id="upl_link" style="margin-top:10px;font-weight:bold;"></div>
 			<div id="prev_reports"></div>
+			</div>
 		</div>
 	</div>
 </div>
