--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -38,6 +38,10 @@
 													<td id="dash_currv">unknown</td>
 												</tr>
 												<tr>
+													<td  data-i18n="dashboard_infobox_label_versionbranch">Version Branch:</td>
+													<td id="dash_versionbranch">unknown</td>
+												</tr>
+												<tr>
 													<td  data-i18n="dashboard_infobox_label_latesthyp">Latest version:</td>
 													<td id="dash_latev">unknown</td>
 												</tr>
@@ -71,7 +75,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-12 col-xxl-5">
+							<div class="col-md-12 col-xxl-5" style="display:none">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-newspaper-o fa-fw"></i>
@@ -90,5 +94,5 @@
 				<!-- /.row -->
 			</div>
 			<!-- /.container-fluid -->
-			
+
 <script src="/js/content_dashboard.js"></script>
