New version function

--- a/assets/webconfig/content/support.html
+++ b/assets/webconfig/content/support.html
@@ -127,4 +127,5 @@
 <script type="text/javascript">
 	performTranslation();
 	createHintH("intro", $.i18n('support_label_intro'), "supp_intro");
+  removeOverlay();
 </script>
