Renaming versionBranch and JSONEditor Enhancement
- versionBranch was renamed to watchedVersionBranch (including all variables and strings. even config)
- Enhancements for JSON Editor. Detection of advanced was not so good. Now you can see advaced if advanced or expert is selected. expert is the highest and should also make advanced visible.
- The levels default, advanced, expert are now also respected in the information tabs. Same logic as for the forms itself. Expert is highest and will also show all advanced settings.

--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -38,8 +38,8 @@
 													<td id="dash_currv">unknown</td>
 												</tr>
 												<tr>
-													<td  data-i18n="dashboard_infobox_label_versionbranch">Version Branch:</td>
-													<td id="dash_versionbranch">unknown</td>
+													<td  data-i18n="dashboard_infobox_label_watchedversionbranch">Watched version branch:</td>
+													<td id="dash_watchedversionbranch">unknown</td>
 												</tr>
 												<tr>
 													<td  data-i18n="dashboard_infobox_label_latesthyp">Latest version:</td>
