--- a/assets/webconfig/content/connection_lost.html
+++ b/assets/webconfig/content/connection_lost.html
@@ -27,7 +27,7 @@ var connectionLost = false;
 var connectionTimer;
 var count = 1;
 var reconnectInterval = 4000;
-var connURL = location.protocol+"//"+location.hostname+":"+window.jsonPort+location.pathname+location.hash;
+var connURL = window.location.protocol+"//"+window.location.hostname+":"+window.jsonPort+window.location.pathname+window.location.hash;
 
 function tryReconnect()
 {
@@ -55,7 +55,7 @@ function connectionLostAction()
 	{
 		connectionLost = true;
 		// if we changed the webui port we connect faster
-		if(window.fastReconnect){
+		if(window.fastReconnect) {
 			window.fastReconnect = false;
 			reconnectInterval = 2000;
 		}
