Global Setting Information on Instances
If a setting page is only changeable globally and instance != 0 is set a notification is shown
thanks @b1rdhous3

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -207,6 +207,12 @@
 				<span data-i18n="dashboard_alert_message_confsave_success"></span>
 			</div>
 		</div>
+		<div id="hyperion_global_setting_notify" style="display:none;padding:0 10px;margin:0">
+			<div class="bs-callout bs-callout-warning">
+				<h4 data-i18n="dashboard_message_global_setting_t"></h4>
+				<span data-i18n="dashboard_message_global_setting"></span>
+			</div>
+		</div>
 		<div id="hyperion_disabled_notify" style="display:none;padding:0 10px;margin:0">
 			<div class="bs-callout bs-callout-danger">
 				<h4 data-i18n="dashboard_alert_message_disabled_t"></h4>
