--- a/assets/webconfig/content/conf_network.html
+++ b/assets/webconfig/content/conf_network.html
@@ -2,7 +2,34 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h3 class="page-header"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network Services</span></h3> 
-			<div id="conf_cont"></div>
+			<div id="conf_cont">
+				<div class="row" id="conf_cont_tok">
+					<div class="col-lg-6" id="tok_desc">
+						<div class="panel panel-default">
+							<div class="panel-heading"><i class="fa fa-key fa-fw"></i><span data-i18n="conf_network_tok_title"></span></div>
+							<div class="panel-body">
+								<div id="tok_desc_cont"></div>
+								<div id="tktable"></div>
+								<div style="margin: 30px 0; border-top:1px solid #d0d0d0"></div>
+								<div class="row">
+									<div class="col-lg-6">
+										<p data-i18n="conf_network_tok_comment_title" style="font-weight:bold"></p>
+									</div>
+									<div class="col-lg-6">
+										<input class="form-control" id="tok_comment" type="text"></input>
+									</div>
+									<div class="col-lg-6">
+										<span id="tok_chars_needed"><br /></span>
+									</div>
+								</div>
+							</div>
+							<div class="panel-footer" style="text-align: right;">
+								<button class="btn btn-primary" id="btn_create_tok" data-i18n="conf_network_createToken_btn" disabled>Create New Token</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
