Fixed modal bug when renaming instances
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -241,6 +241,18 @@
 		</div>
 	</div>
 
+	<!-- renameDialog -->
+	<div id="modal_dialog_rename" class="modal fade" role="dialog" style="z-index:9999">
+		<div class="modal-dialog">
+			<center>
+				<div class="modal-content">
+					<div id="id_body_rename" class="modal-body"></div>
+					<div id="id_footer_rename" class="modal-footer" style="text-align:center"></div>
+				</div>
+			</center>
+		</div>
+	</div>
+
 	<!-- wizardDialog -->
 	<div id="wizard_modal" class="modal fade" role="dialog">
 		<div class="modal-dialog">
