WebUi: Instance Management Tweaks and Chars Needed Information

--- a/assets/webconfig/content/conf_general.html
+++ b/assets/webconfig/content/conf_general.html
@@ -18,10 +18,13 @@
 								<div class="col-lg-6">
 									<input class="form-control" id="inst_name" type="text"></input>
 								</div>
+								<div class="col-lg-6">
+									<span id="inst_chars_needed"><br /></span>
+								</div>
 							</div>
-							<div>
-								<button class="btn btn-primary" id="btn_create_inst" data-i18n="conf_general_createInst_btn" disabled>Create New Token</button>
-							</div>
+						</div>
+						<div class="panel-footer" style="text-align: right;">
+							<button class="btn btn-primary" id="btn_create_inst" data-i18n="conf_general_createInst_btn" disabled>Create New Instance</button>
 						</div>
 					</div>
 				</div>
