--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -3,6 +3,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="about_cont"></div>
+			
 		</div>
 		<div id="danger_act"class="col-lg-6" style="display:none;padding-top:20px">
 			<h4>You found a hidden service menu!</h4>
@@ -26,12 +27,10 @@
 	for(key in libs)
 		libh += '<a href="'+libs[key]+'" target="_blank">'+key+'</a>, ';
 	libh += "<br/>"+$.i18n("about_credits");
-	libh += "<br/><a target='_blank' rel='noopener noreferrer' href='https://raw.githubusercontent.com/hyperion-project/hyperion.ng/master/3RD_PARTY_LICENSES'>"+$.i18n("about_3rd_party_licenses")+"</a>";
-
 	lang = lang.toString().replace(/,/g,", ");
 
-	var fc = ['<span id="danger_trig">'+$.i18n("about_version")+'<span>',$.i18n("about_build"),$.i18n("about_builddate"),$.i18n("about_translations"),$.i18n("about_resources", $.i18n("general_webui_title"))];
-	var sc = [currentVersion,si.build,si.time,'('+availLang.length+')<p>'+lang+'</p><p><a href="https://github.com/hyperion-project/hyperion.ng" target="_blank">'+$.i18n("about_contribute")+'</a></p>',libh];
+	var fc = ['<span id="danger_trig">'+$.i18n("about_version")+'<span>',$.i18n("about_build"),$.i18n("about_builddate"),$.i18n("about_translations"),$.i18n("about_resources", $.i18n("general_webui_title")), $.i18n("about_3rd_party_licenses")];
+	var sc = [currentVersion,si.build,si.time,'('+availLang.length+')<p>'+lang+'</p><p><a href="https://github.com/hyperion-project/hyperion.ng" target="_blank">'+$.i18n("about_contribute")+'</a></p>',libh, '<pre><div id="3rdpartylicenses" style="overflow:scroll;max-height:400px"></div></pre>'];
 
 	createTable("","atb","about_cont");
 	for(var i = 0; i<fc.length; i++)
@@ -49,6 +48,20 @@
 
 	$('#hyp_restart').off().on('click',function(){
 		initRestart();
+	});
+
+	fetch('https://raw.githubusercontent.com/hyperion-project/hyperion.ng/master/3RD_PARTY_LICENSES')
+	.then(function(response) {
+		if(!response.ok)
+		{
+			document.getElementById('3rdpartylicenses').textContent = $.i18n("about_3rd_party_licenses_error");
+		}
+		else
+		{
+			response.text().then(function(text) {
+				document.getElementById('3rdpartylicenses').textContent = text;
+			});
+		}
 	});
 
 	removeOverlay();
