WebUi: Changing i18n tokens and adding catch event for connection error

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -62,6 +62,9 @@
 				document.getElementById('3rdpartylicenses').textContent = text;
 			});
 		}
+	})
+	.catch(function(rejected) {
+		document.getElementById('3rdpartylicenses').textContent = $.i18n("about_3rd_party_licenses_error");
 	});
 
 	removeOverlay();
