Added instance notification, added correct instance switch after page refresh (to last current instance)

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -201,6 +201,11 @@
 
 		<!-- Page Content -->
 		<div id="page-wrapper" style="padding-top:10px; overflow: hidden;">
+		<div id="dashboard_active_instance" style="display:none;padding:0 10px;margin:0">
+			<div class="bs-callout bs-callout-success">
+				<h4 id="dashboard_active_instance_friendly_name"></h4>
+			</div>
+		</div>
 		<div id="hyperion_config_write_success_notify" style="display:none;padding:0 10px;margin:0">
 			<div class="bs-callout bs-callout-success">
 				<h4 data-i18n="dashboard_alert_message_confsave_success_t"></h4>
