Changes for Responsive about site

--- a/assets/webconfig/content/about.html
+++ b/assets/webconfig/content/about.html
@@ -60,7 +60,7 @@
 		else
 		{
 			response.text().then(function(text) {
-				$("#3rdpartylicenses").text(text);
+				$("#3rdpartylicenses").html('<code>'+text+'</code>');
 			});
 		}
 	})
